--- a/build.gradle
+++ b/build.gradle
@@ -1,47 +1,48 @@
 buildscript {
-  repositories {
-    mavenCentral()
-    jcenter()
-  }
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
 
-  dependencies {
-    classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.7'
-    classpath 'com.android.tools.build:gradle:1.3.0'
-    classpath 'org.aspectj:aspectjtools:1.8.6'
-    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
-  }
+    dependencies {
+        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.7'
+        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'org.aspectj:aspectjtools:1.8.6'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+    }
+
 }
 
 allprojects {
-  repositories {
-    mavenCentral()
-  }
+    repositories {
+        mavenCentral()
+    }
 
-  group = GROUP
-  version = VERSION_NAME
+    group = GROUP
+    version = VERSION_NAME
 
-  apply plugin: 'maven'
+    apply plugin: 'maven'
 }
 
 ext {
-  compileSdkVersion = 21
-  buildToolsVersion = '21.1.2'
+    compileSdkVersion = 23
+    buildToolsVersion = '23.0.0'
 }
 
 task cleanExample(type: Exec) {
-  executable = '../gradlew'
-  workingDir = project.file('hugo-example')
-  args = [ 'clean' ]
+    executable = '../gradlew'
+    workingDir = project.file('twig-example')
+    args = ['clean']
 }
 
 task assembleExample(type: Exec) {
-  executable = '../gradlew'
-  workingDir = project.file('hugo-example')
-  args = [ 'assemble' ]
+    executable = '../gradlew'
+    workingDir = project.file('twig-example')
+    args = ['assemble']
 }
 
 task installExample(type: Exec) {
-  executable = '../gradlew'
-  workingDir = project.file('hugo-example')
-  args = [ 'installDebug' ]
+    executable = '../gradlew'
+    workingDir = project.file('twig-example')
+    args = ['installDebug']
 }
