--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
-VERSION_NAME=1.2.2-SNAPSHOT
-GROUP=com.jakewharton.hugo
+VERSION_NAME=1.0.0-SNAPSHOT
+GROUP=com.ambergleam.twig
 
-POM_DESCRIPTION=Annotation-triggered method call logging for your debug builds.
-POM_URL=https://github.com/JakeWharton/hugo/
-POM_SCM_URL=https://github.com/JakeWharton/hugo/
-POM_SCM_CONNECTION=scm:git@github.com/JakeWharton/hugo.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:JakeWharton/hugo.git
+POM_DESCRIPTION=Annotation-triggered method call insults for your debug builds.
+POM_URL=https://github.com/matthew-compton/twig/
+POM_SCM_URL=https://github.com/matthew-compton/twig/
+POM_SCM_CONNECTION=scm:git@github.com/matthew-compton/twig.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:matthew-compton/twig.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=jakewharton
-POM_DEVELOPER_NAME=Jake Wharton
+POM_DEVELOPER_ID=ambergleam
+POM_DEVELOPER_NAME=Matthew Compton
