--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':hugo-annotations'
-include ':hugo-plugin'
-include ':hugo-runtime'
+include ':twig-annotations'
+include ':twig-plugin'
+include ':twig-runtime'
